update recipe visibility to public for Gradle dependency management